# UniversalLexer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md
docs/html/: annotated.html  annotated_dup.js  classes.html  classlexer_1_1___lexer___template___iterator-members.html  classlexer_1_1___lexer___template___iterator.html  classlexer_1_1_lexer-members.html  classlexer_1_1_lexer.html  classlexer_1_1_lexer.js  classlexer_1_1_lexer_const_iterator-members.html  classlexer_1_1_lexer_const_iterator.html  classlexer_1_1_lexer_const_iterator.js  classlexer_1_1_lexer_const_reverse_iterator-members.html  classlexer_1_1_lexer_const_reverse_iterator.html  classlexer_1_1_lexer_const_reverse_iterator.js  classlexer_1_1_lexer_contaner-members.html  classlexer_1_1_lexer_contaner.html  classlexer_1_1_lexer_contaner.js  classlexer_1_1_lexer_iterator-members.html  classlexer_1_1_lexer_iterator.html  classlexer_1_1_lexer_iterator.js  classlexer_1_1_lexer_reverse_const_iterator-members.html  classlexer_1_1_lexer_reverse_const_iterator.html  classlexer_1_1_lexer_reverse_iterator-members.html  classlexer_1_1_lexer_reverse_iterator.html  classlexer_1_1_lexer_reverse_iterator.js  classlexer_1_1_lexer_template_iterator-members.html  classlexer_1_1_lexer_template_iterator.html  classlexer_1_1_lexer_template_iterator.js  classlexer_1_1_token-members.html  classlexer_1_1_token.html  classlexer_1_1_token.js  (+26 more)
src/: lexer-contaner.cpp  lexer-iterator.cpp  lexer.cpp  token.cpp
test/: lexer-test-creating.cpp  lexer-test-iterator.cpp  lexer-test.cpp  test.cpp
(+50 files in other folders)
